Added CMIP5 description

--- a/SIMIP.ipynb
+++ b/SIMIP.ipynb
@@ -378,6 +378,28 @@
     "from functools import partial\n",
     "%matplotlib inline\n",
     "\n",
+    "# NOTE:\n",
+    "# This script works for cmip5 and cmip6 data. The only thing it needs is a proper path to the \n",
+    "# processed netCDF files containing the monthly sea-ice area, sea-ice volume, as well as the \n",
+    "# annual mean GMST (global mean surface temperature). For CMIP6, you can generate these files\n",
+    "# using the two boxes above; for CMIP5, you have to download and process the data yourself. The \n",
+    "# data should be in the same format as the CMIP6 data: the input folder should contain 3 subfolders:\n",
+    "# sia_nh, siv_nh and gmst, in which the three different variables are stored. Then, in each folders, \n",
+    "# the netCDF files should obey the following naming convention:\n",
+    "# <var>_<model_name>_<variant_label>_<scenario>.nc\n",
+    "# In the file, the variable naming should be as follows: sia for sia_nh, siv for siv_nh, gmst for gmst.\n",
+    "# The files should also contain a reasonable time array (like the original cmorized files do).\n",
+    "#\n",
+    "# For example (CMIP5), the NH sea-ice area for the member r1i1p1 of the model CMCC-CM and the scenario \n",
+    "# historical should be in the file:\n",
+    "# <inpath>/sia_nh/sia_nh_CMCC-CM_r1i1p1_historical.nc, and should contain the variable 'sia'.\n",
+    "\n",
+    "# <inpath> is the path to your data. Define it here:\n",
+    "inpath = {'CMIP5':'/work/mh0033/m300681/IPCC/processed_data/CMIP5/',\n",
+    "          'CMIP6':'/work/mh0033/m300681/IPCC/processed_data/CMIP6/'}\n",
+    "# Also give a path to where you would like the data to be stored:\n",
+    "outpath = '/home/mpim/m300681/SIMIP/'\n",
+    "\n",
     "# ------------- Define functions -------------------------------------------------------------\n",
     "# this function reads an nc file and extracts data \n",
     "def read_in(filename,month,var):\n",
@@ -464,16 +486,14 @@
     "             'ssp245':np.arange(1850,2100),'ssp585':np.arange(1850,2100),'rcp26':np.arange(1850,2100),\n",
     "            'rcp85':np.arange(1850,2100),'rcp45':np.arange(1850,2100),'1pctCO2':np.arange(1850,2000)}\n",
     "\n",
-    "    basepath = '/work/mh0033/m300681/IPCC/processed_data/'+cmipname+'/'\n",
+    "    basepath = inpath[cmipname]\n",
     "    hemisphere = 'nh'\n",
-    "\n",
-    "    \n",
     "\n",
     "    # before we start, create a list of all files for the three variables sia, siv, gmst\n",
     "    # and save it to txt files\n",
     "    for var in ['gmst','sia_'+hemisphere,'siv_'+hemisphere]:\n",
     "        files_list = list(sorted([os.path.basename(x) for x in glob.glob(basepath+var+'/'+var+'_*.nc')]))\n",
-    "        with open('/home/mpim/m300681/SIMIP/'+var+'_'+cmipname+'_files.txt', 'w') as f:\n",
+    "        with open(outpath+var+'_'+cmipname+'_files.txt', 'w') as f:\n",
     "            for item in files_list:\n",
     "                f.write(\"%s\\n\" % item)\n",
     "            f.close()\n",
@@ -573,7 +593,7 @@
     "                    var = variable\n",
     "                else:\n",
     "                    var = variable+'_nh'\n",
-    "                f = open('/home/mpim/m300681/IPCC/CMIP6_models/'+scenario+'_'+variable+'_available_models.txt','w')\n",
+    "                f = open(outpath+scenario+'_'+variable+'_available_models.txt','w')\n",
     "                f.write('Model,N_ens\\n')\n",
     "                for model in models[variable]:\n",
     "                    n_ens = len([os.path.basename(x) for x in glob.glob(basepath+var+'/'+var+'_'+model+'_*_'+scenario+'.nc')])\n",
